# sidebet

./: .dockerignore  .env.example  .gitignore  Dockerfile.auth  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  package-lock.json  package.json
.config/zed/: settings.json
auth-sidecar/: package-lock.json  package.json  tsconfig.json
auth-sidecar/src/: index.ts
backend/: Cargo.toml
backend/src/: config.rs  lib.rs  main.rs
backend/src/db/: mod.rs
backend/src/db/migrations/: 20260301000001_users.sql  20260301000002_friendships.sql  20260301000003_events.sql  20260301000004_bets.sql  20260301000005_notifications.sql  20260301000006_bets_amount_text.sql  20260302000001_sweepstakes.sql  20260303000001_open_bets.sql  20260304000001_bump_coins.sql  20260307000001_scale_hardening.sql  20260311000001_prod_hardening.sql
backend/src/models/: mod.rs
backend/src/routes/: bets.rs  events.rs  feed.rs  friends.rs  health.rs  mod.rs  notifications.rs  users.rs  wallet.rs
backend/src/services/: blockchain.rs  mod.rs  notifications.rs  odds.rs
backend/src/ws/: mod.rs
contracts/: foundry.toml
contracts/script/: Deploy.s.sol
contracts/src/: SideBet.sol
contracts/src/interfaces/: IOptimisticOracleV3.sol
contracts/test/: SideBet.t.sol
frontend/: package-lock.json  package.json  svelte.config.js
frontend/scripts/: smoke.mjs
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/lib/: api.ts  auth.ts  web3.ts
frontend/src/routes/: +error.svelte  +layout.svelte  (+1 more)
frontend/static/: manifest.json
scripts/: seed_and_test.sh
(+9 files in other folders)
